.deploy/seeds-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: seeds-app
  name: seeds-app
  namespace: kj800x
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: seeds-app
  type: LoadBalancer
